packages/main/src/components/ObjectPage/ObjectPage.module.css
.objectPage {
  container: objectPage / inline-size;
  --_ui5wcr_ObjectPage_header_display: block;
  --_ui5wcr_ObjectPage_title_fontsize: var(--sapObjectHeader_Title_FontSize);
  --_ui5wcr_ObjectPage_header_height: 0;

  box-sizing: border-box;
  position: relative;
  /* Contain stacking context within the page */
  z-index: 0;
  display: flex;
  flex-direction: column;
  width: 100%;
  height: 100%;
  max-height: 100vh;
  white-space: normal;
  font-family: var(--sapFontFamily);
  background-color: var(--sapBackgroundColor);

  overflow-x: hidden;
  overflow-y: auto;
  scroll-behavior: smooth;

  &[data-in-iframe='true'] {
    scroll-behavior: auto;
  }
}

.iconTabBarMode section[data-component-name='ObjectPageSection'] > div[role='heading'] {
  display: none;
}

/* Header */
.header {
  --_ui5wcr_ObjectPage_header_display: block;
  box-sizing: border-box;
  background-color: var(--sapObjectHeader_Background);
  position: sticky;
  inset-block-start: 0;
  z-index: 5;
  cursor: pointer;
  display: grid;
  grid-auto-columns: 100%;
}

.headerCollapsed {
  --_ui5wcr_ObjectPage_header_display: none;
  --_ui5wcr_ObjectPage_title_fontsize: var(--sapObjectHeader_Title_SnappedFontSize);
}

.headerContainer {
  margin-block-end: 0.25rem;
  background-color: var(--sapObjectHeader_Background);
  display: grid;
}
.hasAvatar {
  grid-auto-columns: min-content calc(100% - 5rem - 2rem);

  [data-component-name='ObjectPageHeaderContent'] {
    grid-column: 2;
  }
}

.headerHoverStyles {
  &[data-not-clickable='true'] {
    cursor: unset;
  }

  &[data-not-clickable='false'] {
    background-color: var(--sapObjectHeader_Hover_Background);

    [data-component-name='ObjectPageTitle'] {
      background-color: var(--sapObjectHeader_Hover_Background);
    }
  }
}

.headerImage {
  min-width: 5rem;
  max-width: 5rem;
  max-height: 5rem;
  display: inline-block;
  margin-inline-end: 2rem;
}

.image {
  width: 100%;
  height: 100%;
}

.anchorBar {
  position: sticky;
  z-index: 5;
}

.tabContainerSpacer {
  height: 3px;
  background: var(--sapObjectHeader_Background);
}

.tabContainer {
  position: sticky;
  z-index: 4;
  background: var(--sapObjectHeader_Background);
}

.tabContainerPlaceholder {
  composes: tabContainer;
  box-shadow: var(--sapContent_HeaderShadow);
  height: 1px;
  flex-shrink: 0;
}

.tabContainerComponent {
  &::part(content) {
    display: none;
  }

  &::part(tabstrip) {
    padding: 0;
    padding-inline: var(--_ui5wcr_ObjectPage_tab_bar_inline_padding);
  }
}

.content {
  flex-grow: 1;
  position: relative;
}

@container (max-width: 599px) {
  .header,
  .headerContainer {
    padding-inline: 1rem;
  }

  .tabContainer {
    --_ui5wcr_ObjectPage_tab_bar_inline_padding: 0;
  }
}

@container (min-width: 600px) and (max-width: 1439px) {
  .header,
  .headerContainer {
    padding-inline: 2rem;
  }

  .tabContainer {
    --_ui5wcr_ObjectPage_tab_bar_inline_padding: 1rem;
  }
}

@container (min-width: 1440px) {
  .header,
  .headerContainer {
    padding-inline: 3rem;
  }

  .tabContainer {
    --_ui5wcr_ObjectPage_tab_bar_inline_padding: 2rem;
  }
}

.footer {
  position: sticky;
  inset-block-end: 0.5rem;
  margin: 0 0.5rem;
  z-index: 4;
}

.footerSpacer {
  height: 1rem;
  flex-shrink: 0;
}

.subSectionPopover::part(content) {
  padding: 0;
}

.clickArea {
  position: absolute;
  inset: 0;
}

.collapsedAvatarHidden {
  display: none;
}

